# nix-config

./: .gitignore  .sops.yaml  README.md  apply-system.sh  apply-user.sh  darwin-configuration.nix  flake.nix  secrets.yaml
briss/: default.nix
ctags/: zettel.ctags
dendritic/: apps.nix  flake-modules.nix  hosts.nix  outputs.nix  systems.nix
home/: base-packages.nix  base.nix  desktop-packages.nix  desktop.nix  home.nix  imports.nix  packages.nix  theme.nix
home-manager/: default.nix
home-manager-modules/: default.nix  imports.nix
lazygit/: config.yml
modules/: ad-blocker.nix  base.nix  default.nix  desktop.nix  hyprland-support.nix  initrd-remote-unlock.nix  jellyfin.nix  navidrome.nix  redmine.nix  reverse-proxy.nix  slskd.nix  superdrive.nix  users.nix
nix/: apply-system.sh  apply-user.sh  coc-settings.json  shell.nix  theme.sh
nixos-modules/: ad-blocker.nix  avahi.nix  base.nix  config.hs  default.nix  desktop.nix  gnome.nix  hyprland-support.nix  jellyfin.nix  plasma.nix  printer-client.nix  printing.nix  sdr.nix  users.nix
rg/: ripgreprc
system/: adguard.nix  base.nix  borg.nix  borgrepo.nix  config.hs  configuration.nix  desktop.nix  disko-air.nix  disko-fft.nix  disko-surface.nix  flake.nix  hardware-air.nix  hardware-configuration-framework.nix  hardware-configuration.nix  hardware-fft.nix  hardware-framework.nix  hardware-red.nix  hardware-surface.nix  hardware-tower.nix  hoogle.nix  jellyfin.nix  machine.nix  printer-client.nix  printing.nix  reflex.nix  sdr.nix  users.nix  (+3 more)
xmonad/: Main.hs  devenv.nix  devenv.yaml  flake.nix  renameme.cabal
(+434 files in other folders)
