cabal-version: 3.0
name:          renameme
version:       0.1.0.0
license:       MIT
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    NoStarIsType

executable exe
  import:         warnings
  main-is:        Main.hs
  build-depends:
    , base            ^>=4.18.2.1
    , containers
    , dbus
    , utf8-string
    , xmonad
    , xmonad-contrib
    , xmonad-extras

  hs-source-dirs: .
